change scoreboard design

--- a/index.html
+++ b/index.html
@@ -20,83 +20,81 @@
 
         <section class="scoreboard">
             <table>
-                <th>Player</th>
-                <th>Score <img class="tablehead__icon" src="images/trophy.png" alt="Trophy Icon"></th>
                 <tbody>
                     <tr>
-                        <td>Anna..........</td>
+                        <td>Anna............................</td>
                         <td class="tablebody__second-column">04</td>
                     </tr>
                     <tr>
-                        <td>Berna.........</td>
+                        <td>Berna...........................</td>
                         <td class="tablebody__second-column">05</td>
                     </tr>
                     <tr>
-                        <td>Bonnie........</td>
+                        <td>Bonnie..........................</td>
                         <td class="tablebody__second-column">02</td>
                     </tr>
                     <tr>
-                        <td>David K.......</td>
+                        <td>David K.........................</td>
                         <td class="tablebody__second-column">02</td>
                     </tr>
                     <tr>
-                        <td>David v.H.....</td>
+                        <td>David v.H.......................</td>
                         <td class="tablebody__second-column">01</td>
                     </tr>
                     <tr>
-                        <td>Diego.........</td>
+                        <td>Diego...........................</td>
                         <td class="tablebody__second-column">00</td>
                     </tr>
                     <tr>
-                        <td>Elli..........</td>
+                        <td>Elli............................</td>
                         <td class="tablebody__second-column">07</td>
                     </tr>
                     <tr>
-                        <td>Henrique......</td>
+                        <td>Henrique........................</td>
                         <td class="tablebody__second-column">02</td>
                     </tr>
                     <tr>
-                        <td>Jaoh..........</td>
+                        <td>Jaoh............................</td>
                         <td class="tablebody__second-column">02</td>
                     </tr>
                     <tr>
-                        <td>Leo...........</td>
+                        <td>Leo.............................</td>
                         <td class="tablebody__second-column">02</td>
                     </tr>
                     <tr>
-                        <td>Marcus........</td>
+                        <td>Marcus..........................</td>
                         <td class="tablebody__second-column">02</td>
                     </tr>
                     <tr>
-                        <td>Merle.........</td>
+                        <td>Merle...........................</td>
                         <td class="tablebody__second-column">01</td>
                     </tr>
                     <tr>
-                        <td>Miriam........</td>
+                        <td>Miriam..........................</td>
                         <td class="tablebody__second-column">01</td>
                     </tr>
                     <tr>
-                        <td>Pia...........</td>
+                        <td>Pia.............................</td>
                         <td class="tablebody__second-column">03</td>
                     </tr>
                     <tr>
-                        <td>Ping..........</td>
+                        <td>Ping............................</td>
                         <td class="tablebody__second-column">02</td>
                     </tr>
                     <tr>
-                        <td>Shawn.........</td>
+                        <td>Shawn...........................</td>
                         <td class="tablebody__second-column">02</td>
                     </tr>
                     <tr>
-                        <td>Stephan.......</td>
+                        <td>Stephan.........................</td>
                         <td class="tablebody__second-column">03</td>
                     </tr>
                     <tr>
-                        <td>Tien..........</td>
+                        <td>Tien............................</td>
                         <td class="tablebody__second-column">02</td>
                     </tr>
                     <tr>
-                        <td>Tobi..........</td>
+                        <td>Tobi............................</td>
                         <td class="tablebody__second-column">05</td>
                     </tr>
                 </tbody>
