add h2'highscore' to the html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <img src="images/flame.gif" alt="flame gif" class="header__flame-gif-1">
     </header>
     <main>
-
+        <section>
+            <h2>HIGHSCORE</h2>
+        </section>
         <section class="scoreboard">
             <table>
                 <tbody>
