change font sizes und alignments

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <section>
-            <h2>HIGHSCORE</h2>
+            <h2 class="highscore">HIGHSCORE</h2>
         </section>
         <section class="scoreboard">
             <table>
@@ -103,8 +103,8 @@
             </table>
         </section>
         <section class="instructions">
-            <h2>How to play?</h2>
-            <p>My fellow frogs, welcome to this game!
+            <h2 class="instructions_header">How to play?</h2>
+            <p class="instructions_paragraph">My fellow frogs, welcome to this game!
                 <br>
                 <br>
                 <br>
