change highscore alignment and design

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 <body>
     <header>
         <img src="images/flame.gif" alt="flame gif" class="header__flame-gif-1">
-        <h1>THE LEGENDARY<br>DESKGAME</h1>
+        <h1><img src="images/" alt="">THE LEGENDARY<br>DESKGAME</h1>
         <img src="images/flame.gif" alt="flame gif" class="header__flame-gif-1">
     </header>
     <main>
-        <section>
-            <h2 class="highscore">HIGHSCORE</h2>
+        <section class="highscore">
+            <img src="images/trophy.png" alt="Trophy Picture" class="highscore__icon">
+            <h2 class="highscore">HIGHSCORE</h2><img src="images/trophy.png" alt="Trophy Picture"
+                class="highscore__icon">
         </section>
         <section class="scoreboard">
             <table>
