--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>The legendary Deskgame</title>
     <link href='https://fonts.googleapis.com/css?family=Press Start 2P' rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="styles.css">
-
+    <script src="./index.js" defer></script>
 </head>
 
 <body>
