--- a/index.html
+++ b/index.html
@@ -24,82 +24,70 @@
         </section>
         <section class="scoreboard">
             <table>
-                <tbody>
+                <tbody data-js="table">
                     <tr>
                         <td>Anna............................</td>
-                        <td class="tablebody__second-column">04</td>
+                        <td class="tablebody__second-column">09</td>
                     </tr>
                     <tr>
                         <td>Berna...........................</td>
-                        <td class="tablebody__second-column">05</td>
+                        <td class="tablebody__second-column">13</td>
                     </tr>
                     <tr>
                         <td>Bonnie..........................</td>
-                        <td class="tablebody__second-column">02</td>
+                        <td class="tablebody__second-column">08</td>
                     </tr>
                     <tr>
                         <td>David K.........................</td>
-                        <td class="tablebody__second-column">02</td>
+                        <td class="tablebody__second-column">09</td>
                     </tr>
                     <tr>
                         <td>David v.H.......................</td>
-                        <td class="tablebody__second-column">01</td>
-                    </tr>
-                    <tr>
-                        <td>Diego...........................</td>
-                        <td class="tablebody__second-column">00</td>
+                        <td class="tablebody__second-column">09</td>
                     </tr>
                     <tr>
                         <td>Elli............................</td>
-                        <td class="tablebody__second-column">07</td>
+                        <td class="tablebody__second-column">13</td>
                     </tr>
                     <tr>
                         <td>Henrique........................</td>
-                        <td class="tablebody__second-column">02</td>
+                        <td class="tablebody__second-column">08</td>
                     </tr>
                     <tr>
                         <td>Jaoh............................</td>
-                        <td class="tablebody__second-column">02</td>
-                    </tr>
-                    <tr>
-                        <td>Leo.............................</td>
-                        <td class="tablebody__second-column">02</td>
+                        <td class="tablebody__second-column">05</td>
                     </tr>
                     <tr>
                         <td>Marcus..........................</td>
-                        <td class="tablebody__second-column">02</td>
-                    </tr>
-                    <tr>
-                        <td>Merle...........................</td>
-                        <td class="tablebody__second-column">01</td>
+                        <td class="tablebody__second-column">06</td>
                     </tr>
                     <tr>
                         <td>Miriam..........................</td>
-                        <td class="tablebody__second-column">01</td>
+                        <td class="tablebody__second-column">06</td>
                     </tr>
                     <tr>
                         <td>Pia.............................</td>
-                        <td class="tablebody__second-column">03</td>
+                        <td class="tablebody__second-column">08</td>
                     </tr>
                     <tr>
                         <td>Ping............................</td>
-                        <td class="tablebody__second-column">02</td>
+                        <td class="tablebody__second-column">05</td>
                     </tr>
                     <tr>
                         <td>Shawn...........................</td>
-                        <td class="tablebody__second-column">02</td>
+                        <td class="tablebody__second-column">07</td>
                     </tr>
                     <tr>
                         <td>Stephan.........................</td>
-                        <td class="tablebody__second-column">03</td>
+                        <td class="tablebody__second-column">08</td>
                     </tr>
                     <tr>
                         <td>Tien............................</td>
-                        <td class="tablebody__second-column">02</td>
+                        <td class="tablebody__second-column">04</td>
                     </tr>
                     <tr>
                         <td>Tobi............................</td>
-                        <td class="tablebody__second-column">05</td>
+                        <td class="tablebody__second-column">12</td>
                     </tr>
                 </tbody>
             </table>
