change design and header

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The legendary Deskgame</title>
+    <title>The Game</title>
     <link href='https://fonts.googleapis.com/css?family=Press Start 2P' rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="styles.css">
     <script src="./index.js" defer></script>
@@ -13,14 +13,12 @@
 <body>
     <header>
         <img src="images/flame.gif" alt="flame gif" class="header__flame-gif-1">
-        <h1><img src="images/" alt="">THE LEGENDARY<br>DESKGAME</h1>
+        <h1>THE GAME</h1>
         <img src="images/flame.gif" alt="flame gif" class="header__flame-gif-1">
     </header>
     <main>
         <section class="highscore">
-            <img src="images/trophy.png" alt="Trophy Picture" class="highscore__icon">
-            <h2 class="highscore">HIGHSCORE</h2><img src="images/trophy.png" alt="Trophy Picture"
-                class="highscore__icon">
+            <h2 class="highscore">HIGHSCORE</h2>
         </section>
         <section class="scoreboard">
             <table>
